--- a/ui/index.html
+++ b/ui/index.html
@@ -30,9 +30,11 @@
         <div class="w-full h-0.5 bg-white -mt-1"></div>
     </div>
     <div class="absolute w-screen flex flex-col bottom-0 text-white lexend-reg h-screen pt-24 pointer-events-none"> <!-- I HATE CSS -->
-        <div class="flex flex-row items-center pl-4 -mt-4 text-4xl">
-            <div class="justify-between">
-                <h2>Good afternoon, User.</h2>
+        <div class="flex flex-row justify-between items-center pl-4 -mt-4 text-4xl">
+            <h2>Good afternoon, User.</h2>
+            <div class="flex flex-row items-center p-4">
+                <h2 class="text-2xl">10,000</h2>
+                <img class="ml-2" src="https://highseas.hackclub.com/doubloon.svg" alt="" width="32" height="32"/>
             </div>
             
         </div>
